objects/blng__PaymentGateway__c.object
<CustomObject>
    <description>Configuration object. The administrator should create one Account for the appropriate Payment Gateway.</description>
    <fields>
        <fullName>adnblng__APILoginId__c</fullName>
        <label>APILoginId</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>adnblng__APITransactionKey__c</fullName>
        <label>APITransactionKey</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>adnblng__TestMode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__GatewayType__c</fullName>
        <label>Gateway Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__GatewayType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csblng__MerchantId__c</fullName>
        <label>MerchantId</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>csblng__MerchantReference__c</fullName>
        <label>MerchantReference</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>csblng__TestMode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csblng__TransactionSecurityKey__c</fullName>
        <label>TransactionSecurityKey</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pyzblng__APIKey__c</fullName>
        <label>APIKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pyzblng__APILoginId__c</fullName>
        <label>APILoginId</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pyzblng__APISecret__c</fullName>
        <label>APISecret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pyzblng__APITransactionKey__c</fullName>
        <label>APITransactionKey</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pyzblng__EnableUserIdentification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable User Identification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pyzblng__JSSecurityKey__c</fullName>
        <label>JSSecurityKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pyzblng__TestMode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pyzblng__Token__c</fullName>
        <label>TransarmorToken</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pyzblng__TransarmorToken__c</fullName>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment Gateway</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Active__c</columns>
        <columns>blng__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Payment Gateways</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>blng__All1</fullName>
        <columns>NAME</columns>
        <columns>blng__Default__c</columns>
        <columns>blng__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>